objects/VLE__c.object
<CustomObject><fields>
        <fullName>API_Host__c</fullName>
        <description>Domain name of API host</description>
        <label>API Host</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>App_ID__c</fullName>
        <description>App ID from desire2learn</description>
        <label>App ID</label>
        <length>22</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>App_Key__c</fullName>
        <description>App Key for desire2learn (secret)</description>
        <label>App Key</label>
        <length>22</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>BatchIsRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates state of batch for synchronization</description>
        <label>BatchIsRunning</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Default_Course_Template_VLE_ID__c</fullName>
        <description>If VLE Template ID is not specified in Module Version, this value is used.</description>
        <inlineHelpText>If VLE Template ID is not specified in Module Version, this value is used.</inlineHelpText>
        <label>Default Course Template VLE ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Default_Module_Reference__c</fullName>
        <description>When Module being sent to VLE, it should contain 'Module Reference' field value in its Name. If blank - this value is used.</description>
        <inlineHelpText>When Module being sent to VLE, it should contain 'Module Reference' field value in its Name. If blank - this value is used.</inlineHelpText>
        <label>Default Module Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Default_Module_Suffix__c</fullName>
        <description>When Module being sent to VLE, it should contain 'Module Suffix' field value in its Name and Code. If blank - this value is used.</description>
        <inlineHelpText>When Module being sent to VLE, it should contain 'Module Suffix' field value in its Name and Code. If blank - this value is used.</inlineHelpText>
        <label>Default Module Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Default_Staff_Role_VLE_ID__c</fullName>
        <description>If Module Role has no matches for VLE Role Id - this value is used as default for Staff</description>
        <inlineHelpText>If Module Role has no matches for VLE Role Id - this value is used as default for Staff</inlineHelpText>
        <label>Default Staff Role VLE ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Default_Student_Role_VLE_ID__c</fullName>
        <description>If Program Type has no matches for VLE Role Id - this value is used as default for Student</description>
        <inlineHelpText>If Program Type has no matches for VLE Role Id - this value is used as default for Student</inlineHelpText>
        <label>Default Student Role VLE ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Email_To_Staff__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send welcome email to staff from VLE staff</description>
        <label>Email To Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Email_To_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send welcome email to student from VLE side</description>
        <label>Email To Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Enable_Programme_Homepage__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enroll Student to Programme Homepage Org Wide Unit.</description>
        <inlineHelpText>Enroll Student to Programme Homepage Org Wide Unit.</inlineHelpText>
        <label>Enable Programme Homepage</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>External_Examiner_Role_ID__c</fullName>
        <description>ID of External Examiner role</description>
        <label>External Examiner Role ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>External_Instructor_Role_ID__c</fullName>
        <description>ID of External Instructor role</description>
        <label>External Instructor Role ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Instructor_Role_ID__c</fullName>
        <description>ID of Instructor role</description>
        <label>Instructor Role ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MSc_Student_Role_ID__c</fullName>
        <description>ID of MSc Student  role</description>
        <label>MSc Student Role ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Observer_Role_ID__c</fullName>
        <description>ID of Observer role</description>
        <label>Observer Role ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prof_Dip_Student_Role_ID__c</fullName>
        <description>Id if Prof Dip Student role</description>
        <label>Prof Dip Student Role ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Short_Course_Student_Role_ID__c</fullName>
        <description>Id of Short Course Student role</description>
        <label>Short Course Student Role ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Role_ID__c</fullName>
        <description>Identifier of "LSTM Student" role</description>
        <label>Student Role ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>User_ID__c</fullName>
        <description>User ID for API calls</description>
        <label>User ID</label>
        <length>22</length>
        <type>Text</type>
    </fields><fields>
        <fullName>User_Key__c</fullName>
        <description>Key for API user (secret)</description>
        <label>User Key</label>
        <length>22</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><description>Credentials for VLE external service</description><enableFeeds>false</enableFeeds><label>VLE parameters</label><visibility>Protected</visibility></CustomObject>